[tool.poetry]
name = "transformers"
version = "1.1.1"
description = "Reimplementing transformers"
authors = ["Bahgat94 <bahgatahmed444@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
tqdm = "^4.64.1"
huggingface-hub = ">=0.11.0,<1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
